# fdm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: error.rs
